# Kathleen---Investo

./: Investments.xlsx  README.md  portfolio_report.py  pyproject.toml  watchlist.csv
.github/workflows/: Monthly_refresh_commodity_targets.yml  Per Ticker Strategy Cache.yaml  TEST Only-Nightly Dry.yaml  generate_commodity_entry_report.yml  generate_daily_dashboard.yml  generate_etf_entry_report.yml  generate_portfolio_report.yml  live_nightly_refresh.yml  test_backtest.yml
data/: commodities_targets.csv
data/_prefetch_reports/: prefetch_failures.csv  prefetch_repairs.csv  prefetch_summary.json
data/strategy_cache/: 0B2.F.json  1T4.F.json  1ZAL.MI.json  8ZI.DU.json  AAPL.json  AC.PA.json  ADBE.json  ADSK.json  AKE.PA.json  AMD.json  AMP.MI.json  AMS.MC.json  BA.json  BC8.DE.json  BKNG.json  BPCR.L.json  BRBY.L.json  BRE.MI.json  CA.PA.json  CAH.json  CAP.PA.json  CBH.F.json  CRM.json  CTEC.L.json  DHL.DE.json  DIA.MI.json  DLG.MI.json  DSY.PA.json  DTE.DE.json  DWS.DE.json  EMG.L.json  EN.PA.json  EVK.DE.json  FDR.MC.json  FISV.json  FME.DE.json  FRA.DE.json  GEST.MC.json  GNN.F.json  GRF.MC.json  (+58 more)
reports/latest/: backtest_summary.csv  backtest_windows.csv
reports/valuation_report/: portfolio_realised_trades_summary.csv  portfolio_report.html  portfolio_report_email.html
scripts/: analyse_golden_gate.py  generate_daily_dashboard.py  prefetch_data.py  prefetch_intraday.py  refresh_commodity_targets.py  run_commodity_entry_optimizer.py  run_etf_entry_optimizer.py  warm_strategy_cache.py
src/jpbuy2/: cli.py  config.py  report.py  strategy_select.py  types.py
(+503 files in other folders)
