[project]
name = "jpbuy2"
version = "0.1.0"
description = "JPBUY2: Golden weekly regime + Silver daily timing (exhaustion->stabilisation->confirmation) with blockers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2.40",
  "openpyxl>=3.1.2",
]

[project.scripts]
jpbuy2 = "jpbuy2.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
